--- a/package.json
+++ b/package.json
@@ -9,13 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "firebase": "^10.1.0",
+    "lottie-react": "^2.4.0",
     "next": "13.4.12",
+    "next-auth": "^4.22.3",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "react-fast-marquee": "^1.6.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.45.2",
+    "react-redux": "^8.1.1",
+    "tailwindcss": "3.3.3",
+    "yarn": "^1.22.19"
+  },
+  "devDependencies": {
+    "daisyui": "^3.5.0"
   }
 }
