--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.45.2",
     "react-redux": "^8.1.1",
+    "sweetalert2": "^11.7.20",
     "tailwindcss": "3.3.3",
     "yarn": "^1.22.19"
   },
